extra menu  height on small device solved

--- a/src/sass/5-state/_5-state.scss
+++ b/src/sass/5-state/_5-state.scss
@@ -1,6 +1,6 @@
 /* 5.1 Full Screen Navigation */
 .is-nav-fullscreen {
-    @extend .t-vh-100;
+    height: 94vh;
     position: relative;
 }
 .is-align-center {
